--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,8 +5,12 @@
     class="flex items-center justify-between border-t-2 py-4 border-gray-100 dark:text-zinc-50"
 >
     <section>&copy; Sidharth Mohanty {new Date().getFullYear()}</section>
-    <section class="flex space-x-2 md:space-x-4">
-        <a href="https://github.com/sidmohanty11" target="_blank" class="hover:text-teal-500 hover:dark:text-teal-300">
+    <section class="flex space-x-2">
+        <a
+            href="https://github.com/sidmohanty11"
+            target="_blank"
+            class="hover:text-teal-500 hover:dark:text-teal-300"
+        >
             <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
@@ -20,7 +24,11 @@
                 ></path>
             </svg>
         </a>
-        <a href="https://linkedin.com/in/sidmohanty11" target="_blank" class="hover:text-teal-500 hover:dark:text-teal-300">
+        <a
+            href="https://linkedin.com/in/sidmohanty11"
+            target="_blank"
+            class="hover:text-teal-500 hover:dark:text-teal-300"
+        >
             <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
@@ -34,7 +42,11 @@
                 ></path>
             </svg>
         </a>
-        <a href="https://instagram.com/sidmohanty_11" target="_blank" class="hover:text-teal-500 hover:dark:text-teal-300">
+        <a
+            href="https://instagram.com/sidmohanty_11"
+            target="_blank"
+            class="hover:text-teal-500 hover:dark:text-teal-300"
+        >
             <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
@@ -48,7 +60,11 @@
                 ></path>
             </svg>
         </a>
-        <a href="https://dev.to/sidmohanty11/" target="_blank" class="hover:text-teal-500 hover:dark:text-teal-300">
+        <a
+            href="https://dev.to/sidmohanty11/"
+            target="_blank"
+            class="hover:text-teal-500 hover:dark:text-teal-300"
+        >
             <svg
                 stroke="currentColor"
                 fill="currentColor"
@@ -63,7 +79,11 @@
                 ></path></svg
             >
         </a>
-        <a href="https://leetcode.com/sidmohanty_11/" target="_blank" class="hover:text-teal-500 hover:dark:text-teal-300">
+        <a
+            href="https://leetcode.com/sidmohanty_11/"
+            target="_blank"
+            class="hover:text-teal-500 hover:dark:text-teal-300"
+        >
             <svg
                 width="24px"
                 height="24px"
@@ -78,6 +98,38 @@
                     d="M16.102 17.93l-2.697 2.607c-.466.467-1.111.662-1.823.662s-1.357-.195-1.824-.662l-4.332-4.363c-.467-.467-.702-1.15-.702-1.863s.235-1.357.702-1.824l4.319-4.38c.467-.467 1.125-.645 1.837-.645s1.357.195 1.823.662l2.697 2.606c.514.515 1.365.497 1.9-.038.535-.536.553-1.387.039-1.901l-2.609-2.636a5.055 5.055 0 0 0-2.445-1.337l2.467-2.503c.516-.514.498-1.366-.037-1.901-.535-.535-1.387-.552-1.902-.038l-10.1 10.101c-.981.982-1.494 2.337-1.494 3.835 0 1.498.513 2.895 1.494 3.875l4.347 4.361c.981.979 2.337 1.452 3.834 1.452s2.853-.512 3.835-1.494l2.609-2.637c.514-.514.496-1.365-.039-1.9s-1.386-.553-1.899-.039zM20.811 13.01H10.666c-.702 0-1.27.604-1.27 1.346s.568 1.346 1.27 1.346h10.145c.701 0 1.27-.604 1.27-1.346s-.569-1.346-1.27-1.346z"
                 ></path>
             </svg>
+        </a>
+        <a href="mailto://sidmohanty11@gmail.com" class="hover:text-teal-500 hover:dark:text-teal-300">
+            <svg
+                stroke="currentColor"
+                fill="currentColor"
+                stroke-width="0"
+                viewBox="0 0 512 512"
+                focusable="false"
+                width="24px"
+                height="24px"
+                xmlns="http://www.w3.org/2000/svg"
+                class="transition"
+                ><path
+                    d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"
+                ></path></svg
+            >
+        </a>
+        <a href="https://drive.google.com/file/d/1EoFN--jq4xlQJ53tqIHTBhZa87qdNUUG/view" target="_blank" class="hover:text-teal-500 hover:dark:text-teal-300">
+            <svg
+                stroke="currentColor"
+                fill="currentColor"
+                stroke-width="0"
+                viewBox="0 0 384 512"
+                focusable="false"
+                width="24px"
+                height="24px"
+                xmlns="http://www.w3.org/2000/svg"
+                class="transition"
+                ><path
+                    d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm64 236c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12v8zm0-64c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12v8zm0-72v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm96-114.1v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z"
+                ></path></svg
+            >
         </a>
     </section>
 </footer>
