--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -138,6 +138,16 @@ const navElements = [
                                 </li>
                             ))
                         }
+                        <li
+                        class="relative inline-flex px-3 py-2 transition hover:text-teal-500 dark:hover:text-teal-300"
+                    >
+                        <a
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            href="https://drive.google.com/file/d/1EoFN--jq4xlQJ53tqIHTBhZa87qdNUUG/view"
+                            >Resume</a
+                        >
+                    </li>
                     </ul>
                 </nav>
             </section>
